[LayoutNG] Don't reuse inline items if they collapse a previous segment break

In some cases, a text node may run segment break rules and completely
remove a preceding run of collapsible whitespaces and segment breaks.
This patch ensures that segment break rules are still run in this case
by stopping inline items from being reused.

Bug: 879088
Change-Id: If4ae3d53bb777c28421851b3ff22bcbaf209cc86
Reviewed-on: https://chromium-review.googlesource.com/c/1370647
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615305}
Former-commit-id: 64698710a10ab64143343f74616cdfffdbfbcd90